--- a/ROMFS/px4fmu_common/init.d/airframes/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/init.d/airframes/CMakeLists.txt
@@ -105,6 +105,8 @@ px4_add_romfs_files(
 
 	16001_helicopter
 
+	# [13101]
+	13101_FireEagle
 	# [17000, 17999] Autogyro
 	17002_TF-AutoG2
 	17003_TF-G2
